# SocExplorer

./: CMakeLists.txt  meson.build
src/: CMakeLists.txt  dockablepluginmanager.cpp  dockablepluginmanager.h  mainwindow.cpp  meson.build
src/Core/: CMakeLists.txt  SocExplorerCore.cpp  SocExplorerCore.h  address.h  bytes_utils.h  cpp_utils.h
src/Core/Logger/: Logger.cpp  Logger.h
src/Core/SOC/: SOC.cpp  SOC.h  socperipheral.h  socregister.h
src/Core/memtester/: memtester.cpp  memtester.h
src/Core/pluginloaderV2/: pluginmanager.h
src/Core/pluginsInterface/: isocexplorerplugin.h  socexplorerplugininterface.h
src/GUI/: CMakeLists.txt
src/GUI/PluginManager/: CMakeLists.txt  PluginTreeWidget.cpp  PluginTreeWidget.h  plugininfowidget.cpp  plugininfowidget.h  plugininfowidget.ui  pluginlist.cpp  pluginlist.h  pluginmanagerview.cpp  pluginmanagerview.h  pluginmanagerview.ui
src/GUI/Widgets/: CMakeLists.txt
src/SocExplorerEngine/: CMakeLists.txt  meson.build
src/SocExplorerEngine/SOC/: socclk.h
src/SocExplorerEngine/engine/: socexplorerengine.cpp
src/SocExplorerEngine/memtester/: memtester.cpp  memtester.h
src/SocExplorerEngine/pluginManagerWdgt/: PluginTreeWidget.cpp  PluginTreeWidget.h  pluginmanagerWDGT.cpp  pluginmanagerWDGT.h  pluginmangerview.cpp  pluginmangerview.h  pluginmangerview.ui
src/SocExplorerEngine/pluginloader/: pluginloader.cpp  pluginloader.h
src/SocExplorerEngine/pluginloaderV2/: pluginmanager.cpp  pluginmanager.h
src/SocExplorerEngine/plugins/: socexplorerplugin.cpp
src/SocExplorerEngine/pluginsInterface/: isocexplorerplugin.h
src/SocExplorerEngine/proxy/: socexplorerproxy.cpp  socexplorerproxy.h
src/common/: CMakeLists.txt
src/genericBinaryFiles/: CMakeLists.txt
src/genericBinaryFiles/elf/: elffile.cpp
src/qhexedit/: CMakeLists.txt
subprojects/: pythonqt.wrap
tests/: CMakeLists.txt
tests/Core/: CMakeLists.txt
tests/Core/Logger/: CMakeLists.txt  main.cpp
tests/Core/MemTester/: CMakeLists.txt  main.cpp
tests/Core/SOC/: CMakeLists.txt  main.cpp
tests/Core/SocExplorerCore/: CMakeLists.txt  main.cpp
tests/Core/bytes_utils/: CMakeLists.txt  main.cpp
tests/GUI/PluginManager/: CMakeLists.txt  main.cpp
tests/Plugins/: CMakeLists.txt
tests/Plugins/simple_plugin/: CMakeLists.txt  main.cpp  simple_plugin.cpp  simple_plugin.h  simple_plugin.json
